--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -265,7 +265,8 @@
     },
     "error": {
       "invalidPlan": "Неподдерживаемый тип плана. Пожалуйста, выберите действительный план.",
-      "fetchingCryptoCurrencies": "Не удалось загрузить доступные варианты криптовалют"
+      "fetchingCryptoCurrencies": "Не удалось загрузить доступные варианты криптовалют",
+      "addressRequired": "Пожалуйста, заполните адрес для выставления счета, чтобы продолжить"
     }
   },
   "general": {
