--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -265,7 +265,8 @@
     },
     "error": {
       "invalidPlan": "Nicht unterstützter Plantyp. Bitte wählen Sie einen gültigen Plan.",
-      "fetchingCryptoCurrencies": "Die verfügbaren Kryptowährungsoptionen konnten nicht geladen werden"
+      "fetchingCryptoCurrencies": "Die verfügbaren Kryptowährungsoptionen konnten nicht geladen werden",
+      "addressRequired": "Bitte vervollständigen Sie Ihre Rechnungsadresse, um fortzufahren"
     }
   },
   "general": {
