Changed OAuth login flow when users is already logged in and add OAuthLinkView component

--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -172,6 +172,12 @@
       "success": "Du hast dich erfolgreich angemeldet",
       "error": "Anmeldung fehlgeschlagen, bitte versuche es erneut",
       "closeWindow": "Du kannst dieses Fenster schließen"
+    },
+    "oauthLink": {
+      "continueAs": "Fortfahren als",
+      "continue": "Fortfahren",
+      "anotherAccount": "Anderes Konto verwenden?",
+      "login": "Anmelden"
     }
   },
   "checkout": {
