--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -172,6 +172,12 @@
       "success": "Вы успешно вошли в систему",
       "error": "Не удалось выполнить вход, попробуйте снова",
       "closeWindow": "Вы можете закрыть это окно"
+    },
+    "oauthLink": {
+      "continueAs": "Продолжить как",
+      "continue": "Продолжить",
+      "anotherAccount": "Использовать другую учетную запись?",
+      "login": "Войти"
     }
   },
   "checkout": {
