--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -188,6 +188,12 @@
       "success": "您已成功登入",
       "error": "無法登入，請再試一次",
       "closeWindow": "您可以關閉此視窗"
+    },
+    "oauthLink": {
+      "continueAs": "繼續使用",
+      "continue": "繼續",
+      "anotherAccount": "使用其他帳戶？",
+      "login": "登入"
     }
   },
   "checkout": {
