feat: implement version history sidebar for drive items
  Add version history sidebar with UI for viewing, restoring, and deleting file versions. Includes state management in UI slice,
  integration with drive explorer context menus, and mock data structure for version display.

--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -890,6 +890,9 @@
         "location": "Location"
       }
     },
+    "versionHistory": {
+      "title": "Version history"
+    },
     "shareModal": {
       "title": "Share \"{{name}}\"",
       "list": {
