--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -4,12 +4,12 @@
     "logOut": "Log Out"
   },
   "featuresBanner": {
-    "label": {
-      "blueText": "Get 90% off",
-      "text": "in all  Plans"
+    "label": { "blueText": "Get 87% off", "text": "in all  Plans" },
+    "title": " Claim your exclusive discount!",
+    "subTitle": {
+      "blueText": "Special offer:",
+      "text": "store files in privacy for even less"
     },
-    "title": "Claim your special Black Friday offer!",
-    "subTitle": "The **biggest discount** for **maximum privacy**",
     "ctaGet": "Accept invite",
     "ctaContinue": "Continue free",
     "guarantee": "30-day money-back guarantee",
