--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -9,22 +9,22 @@
     "cta": "Получить скидку"
   },
   "featuresBanner": {
-    "label": {
-      "blueText": "Скидка 90%",
-      "text": "на все тарифы"
+    "label": { "blueText": "Получите скидку 87%", "text": "на все Premium планы" },
+    "title": "Получите эксклюзивную скидку!",
+    "subTitle": {
+      "blueText": "Специальное предложение:",
+      "text": "храните файлы конфиденциально за меньшие деньги"
     },
-    "title": "Получите специальное предложение Черной пятницы!",
-    "subTitle": "**Максимальная скидка** для **максимальной конфиденциальности**",
-    "ctaGet": "Принять приглашение",
+    "ctaGet": "Получить предложение",
     "ctaContinue": "Продолжить бесплатно",
     "guarantee": "30-дневная гарантия возврата денег",
     "products": {
       "drive": "Drive",
-      "antivirus": "Антивирус",
-      "cleaner": "Очистка",
+      "antivirus": "Antivirus",
+      "cleaner": "Cleaner",
       "vpn": "VPN",
       "meet": "Meet",
-      "mail": "Почта"
+      "mail": "Mail"
     }
   },
   "susbcriptionsBanner": {
