--- a/src/app/i18n/locales/fr.json
+++ b/src/app/i18n/locales/fr.json
@@ -4,13 +4,13 @@
     "logOut": "Déconnexion"
   },
   "featuresBanner": {
-    "label": {
-      "blueText": "90% de réduction",
-      "text": "sur tous les forfaits"
+    "label": { "blueText": "Obtenez 87% de réduction", "text": "sur tous les Plans Premium" },
+    "title": "Obtenez une remise exclusive !",
+    "subTitle": {
+      "blueText": "Offre spéciale :",
+      "text": "stockez vos fichiers en privé pour moins cher"
     },
-    "title": "Profitez de votre offre spéciale Black Friday !",
-    "subTitle": "La **plus grande réduction** pour une **confidentialité maximale**",
-    "ctaGet": "Accepter l'invitation",
+    "ctaGet": "Profiter de l'offre",
     "ctaContinue": "Continuer gratuitement",
     "guarantee": "Garantie de remboursement de 30 jours",
     "products": {
