--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -4,22 +4,22 @@
     "logOut": "登出"
   },
   "featuresBanner": {
-    "label": {
-      "blueText": "90% 折扣",
-      "text": "所有套餐"
+    "label": { "blueText": "獲得87%折扣", "text": "所有高級方案" },
+    "title": "獲得專屬折扣！",
+    "subTitle": {
+      "blueText": "特別優惠：",
+      "text": "以更低價格私密儲存檔案"
     },
-    "title": "领取您的黑色星期五特别优惠！",
-    "subTitle": "**最大折扣**享受**最高隐私保护**",
-    "ctaGet": "接受邀请",
-    "ctaContinue": "继续免费使用",
-    "guarantee": "30天退款保证",
+    "ctaGet": "獲取優惠",
+    "ctaContinue": "免費繼續",
+    "guarantee": "30天退款保證",
     "products": {
-      "drive": "云盘",
-      "antivirus": "杀毒软件",
-      "cleaner": "清理工具",
+      "drive": "Drive",
+      "antivirus": "Antivirus",
+      "cleaner": "Cleaner",
       "vpn": "VPN",
-      "meet": "会议",
-      "mail": "邮箱"
+      "meet": "Meet",
+      "mail": "Mail"
     }
   },
   "susbcriptionsBanner": {
