--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -891,7 +891,13 @@
       }
     },
     "versionHistory": {
-      "title": "Version history"
+      "title": "Version history",
+      "current": "Current",
+      "expiresInDays": "Expires in {{days}} days",
+      "autosaveVersions": "{{count}}/{{total}} autosave versions",
+      "restoreVersion": "Restore version",
+      "downloadVersion": "Download version",
+      "deleteVersion": "Delete version"
     },
     "shareModal": {
       "title": "Share \"{{name}}\"",
