--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -833,6 +833,15 @@
         "location": "Расположение"
       }
     },
+    "versionHistory": {
+      "title": "История версий",
+      "current": "Текущая",
+      "expiresInDays": "Истекает через {{days}} дней",
+      "autosaveVersions": "{{count}}/{{total}} версий автосохранения",
+      "restoreVersion": "Восстановить версию",
+      "downloadVersion": "Скачать версию",
+      "deleteVersion": "Удалить версию"
+    },
     "shareModal": {
       "title": "Поделиться \"{{name}}\"",
       "list": {
@@ -1474,6 +1483,7 @@
       "manageLinkAccess": "Управление доступом",
       "manageAccess": "Управление доступом",
       "download": "Загрузить",
+      "versionHistory": "История версий",
       "moveToTrash": "Переместить в корзину",
       "copyLink": "Копировать ссылку",
       "linkSettings": "Настройки ссылки",
