--- a/src/app/i18n/locales/zh.json
+++ b/src/app/i18n/locales/zh.json
@@ -858,7 +858,20 @@
       "autosaveVersions": "{{count}}/{{total}} 自动保存版本",
       "restoreVersion": "恢复版本",
       "downloadVersion": "下载版本",
-      "deleteVersion": "删除版本"
+      "deleteVersion": "删除版本",
+      "deleteVersionTitle": "删除版本",
+      "deleteButton": "删除",
+      "restoreButton": "恢复",
+      "downloadError": "下载版本失败",
+      "deleteVersionAdvice": "此版本将被永久删除。\n此操作无法撤销。",
+      "deletingVersion": "删除中",
+      "restoreVersionTitle": "恢复版本",
+      "restoreVersionAdvice": "恢复此版本将替换当前文件并删除所有较新的版本。\n一旦恢复，此操作无法撤销。\n\n您可以在恢复之前下载较新版本的副本。",
+      "restoringVersion": "恢复中",
+      "restoreSuccess": "版本恢复成功",
+      "restoreError": "恢复版本失败",
+      "deleteSuccess": "版本删除成功",
+      "deleteError": "删除版本失败"
     },
     "shareModal": {
       "title": "分享 \"{{name}}\"",
